# 381706-2_pauzin_lab

./: .travis.yml  CMakeLists.txt  Pauzin_ScanTable.docx  README.md
Reports/: Pauzin_ArrList.docx  Pauzin_List.docx  Pauzin_Matrix.docx  Pauzin_Multistack.docx  Pauzin_Polish.docx  Pauzin_Polynom.docx  Pauzin_Queue.docx  Pauzin_Stack.docx  Pauzin_StackOnList.docx
arrlist/: CMakeLists.txt  main.cpp
arrlistlib/: CMakeLists.txt  TArrList.h  main.cpp
arrlisttest/: CMakeLists.txt  arrlist_tests.cpp
datlink/: CMakeLists.txt  TDatLink.h
datlist/: CMakeLists.txt  main.cpp
datlistlib/: CMakeLists.txt  TDatList.h
datlisttest/: CMakeLists.txt  datlist_tests.cpp
exeptionlib/: CMakeLists.txt  TExeption.cpp  TExeption.h
hashtable/: CMakeLists.txt  main.cpp
hashtablelib/: CMakeLists.txt  THashTable.h  TListHash.h
hashtabletest/: CMakeLists.txt
infixtopolish/: CMakeLists.txt  main.cpp
infixtopolishlib/: CMakeLists.txt  InfixToPolish.cpp  InfixToPolish.h
infixtopolishtest/: CMakeLists.txt  infixtopolish_tests.cpp
liststack/: CMakeLists.txt  main.cpp
liststacklib/: CMakeLists.txt  TListStack.h
liststacktest/: CMakeLists.txt  liststack_tests.cpp
matrixlib/: CMakeLists.txt  TMatrix.h
matrixtest/: CMakeLists.txt  matrix_tests.cpp
multistack/: CMakeLists.txt  main.cpp
multistacklib/: CMakeLists.txt  MStack.h  TMultiStack.h
multistacktest/: CMakeLists.txt  multistack_tests.cpp
plex/: CMakeLists.txt  main.cpp
plexlib/: CMakeLists.txt  TLine.cpp  TLine.h  TPlex.cpp  TPlex.h  TPoint.cpp  TPoint.h
plextest/: CMakeLists.txt  line_tests.cpp  plex_tests.cpp  point_tests.cpp
polinom/: CMakeLists.txt  main.cpp
polinomlib/: CMakeLists.txt  TMonom.h  TPolinom.cpp  TPolinom.h
polinomtest/: CMakeLists.txt  polinom_tests.cpp
polynom/: CMakeLists.txt  main.cpp
polynomlib/: CMakeLists.txt  TMonom.cpp  TPolynom.cpp  TPolynom.h
polynomtest/: CMakeLists.txt  polynom_tests.cpp
queue/: CMakeLists.txt  main.cpp
queuelib/: CMakeLists.txt  TQueue.h
queuetest/: CMakeLists.txt  queue_tests.cpp
scantable/: CMakeLists.txt  main.cpp
scantablelib/: CMakeLists.txt  TScanTable.h
sorttable/: CMakeLists.txt  main.cpp
sorttablelib/: CMakeLists.txt  TSortTable.h
sorttabletest/: CMakeLists.txt
stack/: CMakeLists.txt  main.cpp
stacklib/: CMakeLists.txt  TStack.h  main.cpp
stacktest/: CMakeLists.txt  stack_tests.cpp
tablelib/: CMakeLists.txt  TKey.h  TTabRecord.h
tabletest/: CMakeLists.txt  scantable_tests.cpp
texttree/: CMakeLists.txt  main.cpp
texttreelib/: CMakeLists.txt  TText.cpp  TText.h  TTextLink.cpp  TTextLink.h
texttreetest/: CMakeLists.txt
treetable/: CMakeLists.txt  main.cpp
treetablelib/: CMakeLists.txt  TTreeNode.h  TTreeTable.h
treetabletest/: CMakeLists.txt
vector/: CMakeLists.txt  main.cpp
vectorlib/: CMakeLists.txt  TVector.h  Vector1.cpp  Vector1.h  main.cpp
vectortest/: CMakeLists.txt  vector_tests.cpp
